Sanitize History
================================================================================

Version 1.2.1 (git)
  * Added a :remove_contents config setting. If set to true, Sanitize will
    remove the contents of non-whitelisted elements in addition to the elements
    themselves.
  * The environment hash passed into transformers now includes a :node_name item
    containing the lowercase name of the current HTML node (e.g. "div").
  * Returning anything other than a Hash or nil from a transformer will now
    raise a meaningful Sanitize::Error exception rather than an unintended
    NameError.

Version 1.2.0 (2010-01-17)
  * Requires Nokogiri ~> 1.4.1.
  * Added support for transformers, which allow you to filter and alter nodes
    using your own custom logic, on top of (or instead of) Sanitize's core
    filter. See the README for details and examples.
  * Added Sanitize.clean_node!, which sanitizes a Nokogiri::XML::Node and all
    its children.
  * Added elements <h1> through <h6> to the Relaxed whitelist. [Suggested by
    David Reese]

Version 1.1.0 (2009-10-11)
  * Migrated from Hpricot to Nokogiri. Requires libxml2 >= 2.7.2 [Adam Hooper]
  * Added an :output config setting to allow the output format to be specified.
    Supported formats are :xhtml (the default) and :html (which outputs HTML4).
  * Changed protocol regex to ensure Sanitize doesn't kill URLs with colons in 
    path segments. [Peter Cooper]

Version 1.0.8 (2009-04-23)
  * Added a workaround for an Hpricot bug that prevents attribute names from
    being downcased in recent versions of Hpricot. This was exploitable to
    prevent non-whitelisted protocols from being cleaned. [Reported by Ben
    Wanicur]

Version 1.0.7 (2009-04-11)
  * Requires Hpricot 0.8.1+, which is finally compatible with Ruby 1.9.1.
  * Fixed a bug that caused named character entities containing digits (like
    &sup2;) to be escaped when they shouldn't have been. [Reported by Sebastian
    Steinmetz]
