@@ -3,8 +3,11 @@ Sanitize History
 
 Version 1.2.1 (git)
   * Added a :remove_contents config setting. If set to true, Sanitize will
-    remove the contents of non-whitelisted elements in addition to the elements
-    themselves.
+    remove the contents of all non-whitelisted elements in addition to the
+    elements themselves. If set to an Array of element names, Sanitize will
+    remove the contents of only those elements (when filtered), and leave the
+    contents of other filtered elements. [Thanks to Rafael Souza for the Array
+    option]
   * The environment hash passed into transformers now includes a :node_name item
     containing the lowercase name of the current HTML node (e.g. "div").
   * Returning anything other than a Hash or nil from a transformer will now
